--- a/package.yml
+++ b/package.yml
@@ -9,3 +9,14 @@ requires:
     redaxo: '^5.10.0'
     php:
         version: '>=7.4'
+installer_ignore:
+    - node_modules
+    - .git
+    - .gitignore
+    - .github
+    - package.json
+    - yarn.lock
+    - resources
+    - .editorconfig
+    - .eslintrc.js
+    - .stylelintrc.js
