--- a/package.yml
+++ b/package.yml
@@ -20,3 +20,5 @@ installer_ignore:
     - .editorconfig
     - .eslintrc.js
     - .stylelintrc.js
+    - lib/composer.json
+    - lib/composer.lock
