--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
   "license": "MIT",
   "scripts": {
-    "lint": "phplint ./ --exclude=vendor --no-cache lib",
-    "phpcs": "phpcs --ignore=*/vendor/* --extensions=php --standard=phpcs.xml lib",
-    "phpcbf": "phpcbf --extensions=php --standard=phpcs.xml lib",
+    "cs-dry": "php-cs-fixer fix -v --ansi --dry-run --config=.php-cs-fixer.dist.php",
+    "cs-fix": "php-cs-fixer fix -v --ansi --config=.php-cs-fixer.dist.php",
     "test": "phpunit --testdox"
   },
   "require-dev": {
+    "redaxo/php-cs-fixer-config": "^2.0",
+    "friendsofphp/php-cs-fixer": "^3.14",
     "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.6",
-    "overtrue/phplint": "^4.1"
+    "psr/log": "1.1.4",
+    "symfony/console": "5.4"
   }
 }
