--- a/package.yml
+++ b/package.yml
@@ -5,7 +5,7 @@ supportpage: https://github.com/FriendsOfREDAXO/yform_export
 
 requires:
     packages:
-        yform: '^4.0.0'
+        yform: '>=4,<6'
     redaxo: '^5.12.0'
     php:
         version: '>=8.0'
